🧹Cleanup of previous commit, add boilerplate square-card for relics and matrix index, shift order of pages, fix flickering on x-page tabs

--- a/src/app/unit-page/unit-page.component.scss
+++ b/src/app/unit-page/unit-page.component.scss
@@ -140,6 +140,10 @@
             }
         }
 
+        .matrix-part, .materials-part, .guide-part {
+            display: none;
+        }
+
         .profile-part {
             .info-selection {
                 position: relative;
